--- a/SDLLevels/SDLLevels.vcxproj
+++ b/SDLLevels/SDLLevels.vcxproj
@@ -117,11 +117,18 @@ copy /Y "$(SolutionDir)External\SDL2_ttf-2.22.0\lib\x86\SDL2_ttf.dll" "$(TargetD
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <AdditionalIncludeDirectories>$(SolutionDir)External\SDL2-2.30.8\include;$(SolutionDir)External\SDL2_ttf-2.22.0\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(SolutionDir)External\SDL2-2.30.8\lib\x64;$(SolutionDir)External\SDL2_ttf-2.22.0\lib\x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_ttf.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <PreBuildEvent>
+      <Command>copy /Y "$(SolutionDir)External\SDL2-2.30.8\lib\x64\SDL2.dll" "$(TargetDir)"
+copy /Y "$(SolutionDir)External\SDL2_ttf-2.22.0\lib\x64\SDL2_ttf.dll" </Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -144,6 +151,7 @@ copy /Y "$(SolutionDir)External\SDL2_ttf-2.22.0\lib\x86\SDL2_ttf.dll" "$(TargetD
     <ClCompile Include="AssetController.cpp" />
     <ClCompile Include="FileController.cpp" />
     <ClCompile Include="GameController.cpp" />
+    <ClCompile Include="Level.cpp" />
     <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Resource.cpp" />
     <ClCompile Include="SDLLevels.cpp" />
@@ -154,6 +162,7 @@ copy /Y "$(SolutionDir)External\SDL2_ttf-2.22.0\lib\x86\SDL2_ttf.dll" "$(TargetD
     <ClCompile Include="TGAReader.cpp" />
     <ClCompile Include="Timing.cpp" />
     <ClCompile Include="TTFont.cpp" />
+    <ClCompile Include="Unit.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Asset.h" />
@@ -161,6 +170,7 @@ copy /Y "$(SolutionDir)External\SDL2_ttf-2.22.0\lib\x86\SDL2_ttf.dll" "$(TargetD
     <ClInclude Include="BasicStructs.h" />
     <ClInclude Include="FileController.h" />
     <ClInclude Include="GameController.h" />
+    <ClInclude Include="Level.h" />
     <ClInclude Include="ObjectPool1.h" />
     <ClInclude Include="Renderer.h" />
     <ClInclude Include="Resource.h" />
@@ -174,6 +184,7 @@ copy /Y "$(SolutionDir)External\SDL2_ttf-2.22.0\lib\x86\SDL2_ttf.dll" "$(TargetD
     <ClInclude Include="TGAReader.h" />
     <ClInclude Include="Timing.h" />
     <ClInclude Include="TTFont.h" />
+    <ClInclude Include="Unit.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
